# Beluna

./: .env  .gitignore  AGENTS.md  Cargo.toml  README.md  TODO.md  beluna.jsonc  beluna.schema.json  pyproject.toml  sustainable_vibe_coding_framework_v_6_revised.md
cli/: .gitignore  Cargo.toml  README.md
cli/src/: main.rs
core/: .gitignore  AGENTS.md  Cargo.toml  beluna.schema.json
core/src/: afferent_pathway.rs  brainstem.rs  cli.rs  config.rs  core_loop.rs  ingress.rs  lib.rs  logging.rs  main.rs  protocol.rs  runtime_types.rs  server.rs  stem.rs  types.rs
core/src/admission/: AGENTS.md  affordance.rs  mod.rs  resolver.rs  types.rs
core/src/ai_gateway/: AGENTS.md  budget.rs  capabilities.rs  gateway.rs  mod.rs  reliability.rs  request_normalizer.rs  resilience.rs  response_normalizer.rs  router.rs  telemetry.rs  types.rs  types_chat.rs
core/src/ai_gateway/adapters/: github_copilot.rs  http_common.rs  http_errors.rs  http_stream.rs  mod.rs  ollama.rs  openai_compatible.rs  wire.rs
core/src/ai_gateway/adapters/github_copilot/: chat.rs  mod.rs
core/src/ai_gateway/adapters/ollama/: chat.rs  mod.rs  wire.rs
core/src/ai_gateway/adapters/openai_compatible/: chat.rs  mod.rs  wire.rs
core/src/ai_gateway/adapters/openai_responses/: chat.rs  mod.rs  wire.rs
core/src/ai_gateway/chat/: api.rs  api_chat.rs  capabilities.rs  dispatcher.rs  executor.rs  message.rs  message_codec.rs  mod.rs  runtime.rs  session_store.rs  store.rs  thread.rs  thread_types.rs  tool.rs  tool_scheduler.rs  turn.rs  types.rs
core/src/body/: AGENTS.md  mod.rs  payloads.rs  shell.rs  web.rs
core/src/body/std/: mod.rs  payloads.rs  shell.rs  web.rs
core/src/config/: body.rs  continuity.rs  cortex.rs  logging.rs  observability.rs  runtime_loop.rs  schema.rs  spine.rs  validation.rs
core/src/continuity/: AGENTS.md  debit_sources.rs  engine.rs  error.rs  invariants.rs  mod.rs  noop.rs  persistence.rs  ports.rs  state.rs  types.rs
core/src/cortex/: AGENTS.md  clamp.rs  cognition.rs  cognition_patch.rs  commitment_manager.rs  contracts.rs  error.rs  facade.rs  helpers_input.rs  helpers_output.rs  ir.rs  mod.rs  noop.rs  pipeline.rs  planner.rs  ports.rs  primary.rs  prompts.rs  reactor.rs  runtime.rs  state.rs  testing.rs  types.rs
core/src/cortex/adapters/: ai_gateway.rs  mod.rs
core/src/cortex/helpers/: act_descriptor_input_helper.rs  acts_output_helper.rs  goal_forest_helper.rs  goal_forest_input_helper.rs  goal_tree_input_helper.rs  goal_tree_patch_output_helper.rs  l1_memory_flush_output_helper.rs  l1_memory_input_helper.rs  mod.rs  proprioception_input_helper.rs  sense_input_helper.rs
core/src/cortex/helpers/goal_forest_helper/: mod.rs  model.rs  patch.rs
core/src/cortex/runtime/: afferent_admission.rs  mod.rs  primary.rs
core/src/cortex/runtime/primary/: apply.rs  attention.rs  cleanup.rs  executor.rs  session.rs  tools.rs
core/src/ledger/: AGENTS.md  ledger.rs  mod.rs  stage.rs  types.rs
core/src/mind/: AGENTS.md  conflict.rs  error.rs  evaluator.rs  evolution.rs  facade.rs  goal_manager.rs  mod.rs  noop.rs  ports.rs  preemption.rs  state.rs  types.rs
core/src/non_cortex/: AGENTS.md  affordance.rs  continuity.rs  debit_sources.rs  error.rs  facade.rs  ledger.rs  mod.rs  noop.rs  ports.rs  resolver.rs  types.rs
core/src/observability/: metrics.rs  mod.rs  otel.rs
core/src/observability/contract/: mod.rs  validate.rs
core/src/observability/otel/: logs.rs  metrics.rs  mod.rs  settings.rs  traces.rs
core/src/observability/owner_log/: emit.rs  events.rs  ids.rs  mod.rs  schema.rs  value.rs
core/src/observability/runtime/: ai_gateway.rs  cortex.rs  emit.rs  flatten.rs  flatten_tests.rs  mod.rs  spine.rs  stem.rs
core/src/spine/: AGENTS.md  endpoint.rs  error.rs  mod.rs  noop.rs  ports.rs  registry.rs  router.rs  runtime.rs  types.rs
core/src/spine/adapters/: catalog_bridge.rs  inline.rs  mod.rs  unix_socket.rs  wire.rs
core/src/stem/: afferent_pathway.rs  efferent_pathway.rs  pathway.rs  runtime.rs
core/tests/: AGENTS.md  admission_bdt.rs  continuity_bdt.rs  cortex_bdt.rs  cortex_continuity_flow.rs  cortex_non_cortex_flow.rs  ledger_bdt.rs  mind_bdt.rs  non_cortex_bdt.rs  observability_contract.rs  spine_bdt.rs  stem_bdt.rs
core/tests/admission/: admission.rs  mod.rs
core/tests/agent-task/: AGENTS.md  main.rs
core/tests/agent-task/kit/: ai.rs  case.rs  endpoints.rs  evidence.rs  mod.rs  o11y.rs  oracle.rs  runner.rs  workspace.rs
core/tests/ai_gateway/: budget.rs  copilot_adapter.rs  gateway_e2e.rs  http_common.rs  main.rs  mod.rs  ollama.rs  openai_compatible.rs  openai_responses.rs  request_normalizer.rs  router.rs  thread.rs  turn.rs
core/tests/ai_gateway/kit/: chat.rs  local_http.rs  mod.rs
core/tests/continuity/: debits.rs  mod.rs  state.rs
core/tests/cortex/: ai_gateway_adapter.rs  clamp.rs  commitments.rs  mod.rs  pipeline.rs  planner.rs  reactor.rs
core/tests/fixtures/observability/: cortex.json  spine.json  stem.json
core/tests/ledger/: ledger.rs
core/tests/mind/: conflict.rs  evaluator.rs  evolution.rs  facade_loop.rs  goal_manager.rs  mod.rs  preemption.rs
core/tests/non_cortex/: admission.rs  debits.rs  ledger.rs  mod.rs
core/tests/spine/: contracts.rs  dispatch.rs
core/tests/stem/: capability_patch.rs  dispatch_pipeline.rs  loop_control.rs  mod.rs  shutdown.rs
moira/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
moira/src-tauri/capabilities/: default.json
moira/src-tauri/src/: AGENTS.md  commands.rs  lib.rs  main.rs  state.rs
moira/src-tauri/src/app/: bootstrap.rs  mod.rs  state.rs
moira/src-tauri/src/atropos/: mod.rs  model.rs  service.rs  wake_command.rs
moira/src-tauri/src/clotho/: artifacts.rs  mod.rs  model.rs  profile_runtime.rs  profiles.rs  service.rs
moira/src-tauri/src/ingest/: mod.rs  otlp.rs
moira/src-tauri/src/lachesis/: model.rs  normalize.rs  pulse.rs  receiver.rs  service.rs
moira/src-tauri/src/store/: mod.rs  read.rs  write.rs
src/: cli.rs  (+4 more)
tasks/o11y-otel-log-model-reset-20260504/capture-receiver/: Cargo.toml
tasks/o11y-otel-log-model-reset-20260504/capture-receiver/src/: main.rs
(+866 files in other folders)
