[project]
name = "beluna"
version = "0.1.0"
description = "Beluna hybrid agent scaffold (Python + Rust)"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
beluna = "beluna.cli:main"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.build]
package-dir = "src"

[tool.pdm.scripts]
agent = "python -m beluna.cli"
rust-agent = "cargo run --manifest-path rust/Cargo.toml"
