[package]
name = "beluna-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["io-std", "io-util", "macros", "net", "rt-multi-thread", "sync"] }
uuid = { version = "1.18.1", features = ["v4"] }
