[package]
name = "beluna"
version = "0.1.0"
edition = "2024"

[features]
default = ["std-shell", "std-web"]
std-shell = []
std-web = []

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
futures-core = "0.3.31"
futures-util = "0.3.31"
json5 = "0.4.1"
jsonschema = "0.18.2"
md5 = "0.7.0"
opentelemetry = "0.31.0"
opentelemetry-appender-tracing = "0.31.1"
opentelemetry-otlp = { version = "0.31.0", default-features = false, features = ["grpc-tonic", "http-proto", "logs", "metrics", "reqwest-blocking-client"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
reqwest = { version = "0.12.14", default-features = false, features = ["json", "rustls-tls", "stream"] }
regex = "1.11.1"
schemars = { version = "0.8.21", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
sysinfo = "0.38.2"
thiserror = "2.0.12"
time = { version = "0.3.41", features = ["formatting", "local-offset"] }
tokio = { version = "1.44.1", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1.17"
tokio-util = "0.7.13"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-error = "0.2.1"
tracing-opentelemetry = "0.32.0"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json", "time"] }
uuid = { version = "1.15.1", features = ["serde", "v4", "v7"] }
validator = { version = "0.20.0", features = ["derive"] }
