[package]
name = "moira"
version = "0.1.0"
description = "Beluna Moira"
authors = ["lanzhijiang"]
edition = "2024"

[lib]
name = "moira_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
duckdb = { version = "1.10501.0", features = ["bundled"] }
opentelemetry-proto = { version = "0.31.0", features = ["gen-tonic", "logs", "with-serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.10.3", features = [] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting"] }
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
tonic = { version = "0.14.5", features = ["transport"] }
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["serde", "v7"] }
