[package]
name = "moira"
version = "0.1.0"
description = "Beluna Moira"
authors = ["lanzhijiang"]
edition = "2024"

[lib]
name = "moira_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
async-trait = "0.1.89"
dotenvy = "0.15.7"
duckdb = { version = "1.10501.0", features = ["bundled"] }
flate2 = "1.1.5"
json5 = "0.4.1"
libc = "0.2.177"
opentelemetry-proto = { version = "0.31.0", features = ["gen-tonic", "logs", "with-serde"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
tar = "0.4.44"
tauri = { version = "2.10.3", features = [] }
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting"] }
tokio = { version = "1.48.0", features = ["macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.18", features = ["net"] }
tonic = { version = "0.14.5", features = ["transport"] }
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["serde", "v7"] }
