[package]
name = "moira"
version = "0.1.0"
description = "Beluna Moira"
authors = ["lanzhijiang"]
edition = "2024"

[lib]
name = "moira_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["duckdb-prebuilt"]
duckdb-prebuilt = ["moira-runtime/duckdb-prebuilt"]
duckdb-bundled = ["moira-runtime/duckdb-bundled"]

[dependencies]
moira-runtime = { path = "../runtime", default-features = false }
tauri = { version = "2.10.3", features = [] }
tracing = "0.1.41"
