[package]
name = "beluna-otlp-log-capture"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
opentelemetry-proto = { version = "0.31.0", features = ["gen-tonic", "logs", "with-serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.44.1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { version = "0.1.17", features = ["net"] }
tonic = "0.14.2"
